Home Page Timer styling

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,21 @@
 <head>
   <title>TimeTrackerApp</title>
+
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+  <header>
+    <h2>Winthrop University</h2>
+  </header>
+
   <div id="react-target"></div>
+
+  <footer>
+    <ul>
+      <a href="#"><li>Item 1</li></a>
+      <a href="#"><li>Item 2</li></a>
+      <a href="#"><li>Item 3</li></a>
+    </ul>
+  </footer>
 </body>
