Added nav images / drop shadows to buttons

--- a/client/main.html
+++ b/client/main.html
@@ -13,9 +13,9 @@
 
   <footer>
     <ul>
-      <a href="#"><li>Item 1</li></a>
-      <a href="#"><li>Item 2</li></a>
-      <a href="#"><li>Item 3</li></a>
+      <li><a href="#"><img src="images/Home.png" alt="Settings Icon"></a></li>
+      <li><a href="#"><img src="images/List.png" alt="Settings Icon"></a></li>
+      <li><a href="#"><img src="images/Settings.png" alt="Settings Icon"></a></li>
     </ul>
   </footer>
 </body>
