Formatted elapsed time and change btn color

--- a/client/main.html
+++ b/client/main.html
@@ -1,15 +1,17 @@
 <head>
   <title>TimeTrackerApp</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 
 <body>
-  <header>
+  <header class="redBG">
     <h2>Winthrop University</h2>
   </header>
 
   <div id="react-target"></div>
 
-  <footer>
+  <footer class="redBG">
     <ul>
       <li><a href="#"><img src="images/Home.png" alt="Settings Icon"></a></li>
       <li><a href="#"><img src="images/List.png" alt="Settings Icon"></a></li>
