added mongo support (for reals this times)

--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,4 @@
-<head>
+<!-- <head>
   <title>TimeTrackerApp</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
@@ -18,4 +18,11 @@
       <li><a href="#"><img src="images/Settings.png" alt="Settings Icon"></a></li>
     </ul>
   </footer>
+</body> -->
+<head>
+  <title>TimeTrackerApp</title>
+</head>
+
+<body>
+  <div id="react-target"></div>
 </body>
